fix(security): Atlas/Vercel hardening + production safety guards
CRITICAL SECURITY FIXES (Per Eng. Sultan Review):

1) Vercel Secrets Are Revealable (P0)
   - Created docs/VERCEL_ENV_HARDENING.md (500+ lines)
   - Issue: Secrets show "Click to reveal" (NOT Sensitive vars)
   - Guide: Delete + re-add as Sensitive (Prod/Preview only)

2) Atlas Database Users Exposure (P0)
   - fixzitadmin has plaintext secret in Description field
   - Both users have atlasAdmin (too permissive)
   - Updated SECURITY_ATLAS_CHECKLIST.md with urgent actions

3) Resource Policy JSON Format (Correction)
   - Fixed to Cedar policy language format
   - Source: MongoDB Resource Policies docs

4) Production Safety Guards (Code)
   - Created lib/config/env-guards.ts (blocks OTP bypass in prod)
   - Created scripts/ci/env-guard-check.ts (CI validation)
   - Updated instrumentation-node.ts (startup enforcement)
   - Added pnpm env:check command

Files Changed:
- NEW: docs/VERCEL_ENV_HARDENING.md
- NEW: lib/config/env-guards.ts
- NEW: scripts/ci/env-guard-check.ts
- UPDATED: docs/SECURITY_ATLAS_CHECKLIST.md
- UPDATED: instrumentation-node.ts
- UPDATED: package.json

Verification:
- lint: 0 errors
- typecheck: 0 errors
- env:check: PASS

User Actions Required: See docs/VERCEL_ENV_HARDENING.md

--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "verify:org-context": "tsx scripts/verify-org-context.ts && SKIP_GLOBAL_MONGO=true vitest run tests/smoke/org-context-flow.test.tsx tests/server/support/support-org-apis.test.ts",
     "guard:static": "bash scripts/check-org-guards.sh",
     "guard:prod-env": "node scripts/ci/verify-prod-env.js",
+    "env:check": "tsx scripts/ci/env-guard-check.ts",
     "check:route-aliases": "tsx scripts/check-route-aliases.ts",
     "check:route-aliases:json": "tsx scripts/check-route-aliases.ts --json _artifacts/route-aliases.json",
     "archive:route-metrics": "tsx scripts/archive-route-aliases.ts",
