--- a/package.json
+++ b/package.json
@@ -190,6 +190,7 @@
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
@@ -230,7 +231,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.66.1",
     "react-hot-toast": "^2.6.0",
-    "recharts": "^3.4.1",
+    "recharts": "^3.5.1",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
