--- a/package.json
+++ b/package.json
@@ -84,6 +84,9 @@
     "test:services": "pnpm exec vitest run tests/services",
     "test:auth": "vitest -c vitest.config.api.ts run tests/api/auth/**/*.test.{ts,tsx}",
     "test:api": "vitest -c vitest.config.api.ts run",
+    "test:api:bounded": "vitest -c vitest.config.api.ts run --maxConcurrency=2 --testTimeout=120000 --hookTimeout=120000 --teardownTimeout=60000 --slowTestThreshold=120000",
+    "test:ui:bounded": "vitest -c vitest.config.api.ts --project ui run --maxConcurrency=2 --testTimeout=120000 --hookTimeout=120000 --teardownTimeout=60000 --slowTestThreshold=120000",
+    "test:models:ci": "vitest -c vitest.config.models.ts run --runInBand --testTimeout=120000 --hookTimeout=120000 --teardownTimeout=60000",
     "test:watch": "vitest",
     "test:ci": "vitest run --bail 1",
     "test:peek": "pnpm test 2>&1 | head -n 200",
