--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "guard:static": "bash scripts/check-org-guards.sh",
     "guard:prod-env": "node scripts/ci/verify-prod-env.js",
     "env:check": "tsx scripts/ci/env-guard-check.ts",
+    "smoke:prod": "node scripts/smoke/post-deploy-smoke.mjs",
     "check:route-aliases": "tsx scripts/check-route-aliases.ts",
     "check:route-aliases:json": "tsx scripts/check-route-aliases.ts --json _artifacts/route-aliases.json",
     "archive:route-metrics": "tsx scripts/archive-route-aliases.ts",
@@ -312,6 +313,7 @@
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.47.0",
+    "undici": "^7.16.0",
     "vitest": "^3.2.4",
     "webpack": "^5.103.0",
     "zx": "^8.8.5"
