--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "test:server": "vitest -c vitest.config.ts --project server run",
     "test:watch": "vitest",
     "test:ci": "vitest run --bail 1",
+    "test:ci:shard": "node scripts/vitest-shard.mjs",
     "test:peek": "pnpm test 2>&1 | head -n 200",
     "test:fail": "pnpm test 2>&1 | grep -A 8 -E 'FAIL|✖|Error|AssertionError|Test Files|failed'",
     "test:summary": "pnpm test 2>&1 | tail -n 50",
@@ -175,12 +176,12 @@
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^2.0.71",
+    "@ai-sdk/openai": "^2.0.88",
     "@auth/core": "0.41.0",
-    "@aws-sdk/client-s3": "^3.933.0",
-    "@aws-sdk/client-secrets-manager": "^3.933.0",
-    "@aws-sdk/middleware-logger": "^3.930.0",
-    "@aws-sdk/s3-request-presigner": "^3.933.0",
+    "@aws-sdk/client-s3": "^3.956.0",
+    "@aws-sdk/client-secrets-manager": "^3.956.0",
+    "@aws-sdk/middleware-logger": "^3.956.0",
+    "@aws-sdk/s3-request-presigner": "^3.956.0",
     "@hello-pangea/dnd": "^18.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -193,7 +194,7 @@
     "@tanstack/react-query": "^5.90.10",
     "@vercel/functions": "^3.3.3",
     "@vercel/speed-insights": "^1.3.1",
-    "ai": "^5.0.98",
+    "ai": "^5.0.115",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "class-variance-authority": "^0.7.1",
@@ -219,7 +220,7 @@
     "isomorphic-dompurify": "^2.32.0",
     "jose": "^5.10.0",
     "jsonwebtoken": "^9.0.3",
-    "libphonenumber-js": "^1.12.26",
+    "libphonenumber-js": "^1.12.33",
     "lru-cache": "^11.2.2",
     "lucide-react": "^0.294.0",
     "meilisearch": "^0.54.0",
@@ -248,7 +249,7 @@
     "server-only": "^0.0.1",
     "sonner": "^2.0.7",
     "swagger-ui-react": "^5.30.3",
-    "swr": "^2.3.6",
+    "swr": "^2.3.8",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "unified": "^11.0.5",
@@ -257,10 +258,10 @@
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@eslint/js": "^9.39.1",
+    "@eslint/js": "^9.39.2",
     "@faker-js/faker": "^10.1.0",
-    "@next/bundle-analyzer": "^16.0.3",
-    "@next/eslint-plugin-next": "^16.0.3",
+    "@next/bundle-analyzer": "^16.1.0",
+    "@next/eslint-plugin-next": "^16.1.0",
     "@playwright/test": "^1.56.1",
     "@storybook/addon-a11y": "^8.6.14",
     "@storybook/addon-essentials": "^8.6.14",
@@ -271,7 +272,7 @@
     "@storybook/test": "^8.6.14",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
+    "@testing-library/react": "^16.3.1",
     "@testing-library/user-event": "^14.6.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/google.maps": "^3.58.1",
@@ -285,11 +286,11 @@
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@types/supertest": "^6.0.3",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "chalk": "^4.1.2",
     "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
-    "eslint": "^9.39.1",
+    "eslint": "^9.39.2",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-react-hooks": "^7.0.1",
