--- a/package.json
+++ b/package.json
@@ -354,7 +354,8 @@
       "mongodb": "6.21.0",
       "node-forge": ">=1.3.2",
       "jws@^3": "3.2.3",
-      "jws@^4": "4.0.1"
+      "jws@^4": "4.0.1",
+      "qs": ">=6.14.1"
     }
   },
   "simple-git-hooks": {
