--- a/package.json
+++ b/package.json
@@ -360,7 +360,10 @@
       "node-forge": ">=1.3.2",
       "jws@^3": "3.2.3",
       "jws@^4": "4.0.1",
-      "qs@<6.14.1": ">=6.14.1"
+      "qs@<6.14.1": ">=6.14.1",
+      "archiver": ">=7.0.0",
+      "inflight": ">=1.0.6",
+      "brace-expansion": ">=2.0.1"
     }
   },
   "simple-git-hooks": {
