--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ duplicate-detection-report.json
 !/_artifacts/eslint-scripts-tools-scan.json
 /tests/_artifacts/
 /qa/artifacts/sidebar-*.png
+/qa/qa/artifacts/
 /reports/*
 /exports/
 /screenshots/
